--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
 
             <nav>
 
-                <h1>خانه رویایی</h1>
-
+                <h1>خانه <span>رویایی</span></h1>
+                <div class="search_container">
+                   <input type="text" placeholder="جستجو">
+                   <i class="	fas fa-search"></i>
+                </div>
                 <ul>
                     <li>خانه</li>
                     <li>درباره ما</li>
-                    
+
                     <li>خدمات</li>
                     <li>تماس با ما</li>
                 </ul>
