--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                    <i class="	fas fa-search"></i>
                 </div>
                 <ul>
-                    <li>خانه</li>
-                    <li>درباره ما</li>
+                    <li><a href="">خانه</a></li>
+                    <li><a href="">درباره ما</a></li>
 
-                    <li>خدمات</li>
-                    <li>تماس با ما</li>
+                    <li><a href="">خدمات</a></li>
+                    <li><a href="page_aboutUs/about_us.html">تماس با ما</a></li>
                 </ul>
 
                 <div class="nav_icons">
@@ -40,6 +40,10 @@
             </nav>
 
         </header>
+
+        <main>
+            <h1>main</h1>
+        </main>
 
     </div>
 
