--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
         <header>
 
             <nav>
-
-                <h1>خانه <span>رویایی</span></h1>
+                <div class="title_container">
+                    <h1>خانه <span>رویایی</span></h1>
+                    <h2>romance <span>house</span></h2>
+                </div>
                 <div class="search_container">
-                   <input type="text" placeholder="جستجو">
-                   <i class="	fas fa-search"></i>
+                    <input type="text" placeholder="جستجو">
+                    <i class="	fas fa-search"></i>
                 </div>
                 <ul>
                     <li><a href="">خانه</a></li>
