title animation develope

--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
 </head>
 
 <body>
-
+    <div id="onload_page">
+        <h1>onload_page</h1>
+    </div>
     <div class="site_container">
 
         <header>
 
             <nav>
                 <div class="title_container">
-                    <h1>خانه <span>رویایی</span></h1>
-                    <h2>romance <span>house</span></h2>
+                    <h1 id="title_h1">خانه <span>رویایی</span></h1>
+                    <h2 id="title_h2">romance <span>house</span></h2>
                 </div>
                 <div class="search_container">
                     <input type="text" placeholder="جستجو">
@@ -41,6 +43,10 @@
 
             </nav>
 
+            <div class="intro">
+                intro
+            </div>
+
         </header>
 
         <main>
@@ -48,7 +54,7 @@
         </main>
 
     </div>
-
+    <script src="index.js"></script>
 </body>
 
 </html>
