--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         <header>
 
             <nav>
-                <div class="title_container">
-                    <h1 id="title_h1">خانه <span>رویایی</span></h1>
-                    <h2 id="title_h2">romance <span>house</span></h2>
+                
+                <i class="fas fa-bars"></i>
+                
+                <div class="nav_icons">
+                    <i class="fa fa-user"></i>
+                    <i class="fas fa-shopping-cart"></i>
                 </div>
-                <div class="search_container">
-                    <input type="text" placeholder="جستجو">
-                    <i class="	fas fa-search"></i>
-                </div>
+
                 <ul>
                     <li><a href="">خانه</a></li>
                     <li><a href="">درباره ما</a></li>
@@ -34,17 +34,25 @@
                     <li><a href="page_aboutUs/about_us.html">تماس با ما</a></li>
                 </ul>
 
-                <div class="nav_icons">
-                    <i class="fa fa-user"></i>
-                    <i class="fas fa-shopping-cart"></i>
+                <div class="search_container">
+                    <input type="text" placeholder="جستجو">
+                    <i class="	fas fa-search"></i>
                 </div>
 
-                <i class="fas fa-bars"></i>
+                <div class="title_container">
+                    <h1 id="title_h1">خانه <span>رویایی</span></h1>
+                    <h2 id="title_h2">romance <span>house</span></h2>
+                </div>
 
             </nav>
 
             <div class="intro">
-                intro
+                <h1>طراحی داخلی مدرن</h1>
+                <p>با ما منحصر به فرد باشید</p>
+                <div>
+                    <button>خرید محصولات</button>
+                    <button>جستجو</button>
+                </div>
             </div>
 
         </header>
