--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <header>
 
             <nav>
-                
+
                 <i class="fas fa-bars"></i>
-                
+
                 <div class="nav_icons">
                     <i class="fa fa-user"></i>
                     <i class="fas fa-shopping-cart"></i>
@@ -48,7 +48,13 @@
 
             <div class="intro">
                 <h1>طراحی داخلی مدرن</h1>
-                <p>با ما منحصر به فرد باشید</p>
+                <p>
+                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها
+                    و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
+                    کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و
+                    آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه
+                    ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد.
+                </p>
                 <div>
                     <button>خرید محصولات</button>
                     <button>جستجو</button>
