--- a/index.html
+++ b/index.html
@@ -17,34 +17,7 @@
 
         <header>
 
-            <nav>
-
-                <i class="fas fa-bars"></i>
-
-                <div class="nav_icons">
-                    <i class="fa fa-user"></i>
-                    <i class="fas fa-shopping-cart"></i>
-                </div>
-
-                <ul>
-                    <li><a href="">خانه</a></li>
-                    <li><a href="">درباره ما</a></li>
-
-                    <li><a href="">خدمات</a></li>
-                    <li><a href="page_aboutUs/about_us.html">تماس با ما</a></li>
-                </ul>
-
-                <div class="search_container">
-                    <input type="text" placeholder="جستجو">
-                    <i class="	fas fa-search"></i>
-                </div>
-
-                <div class="title_container">
-                    <h1 id="title_h1">خانه <span>رویایی</span></h1>
-                    <h2 id="title_h2">romance <span>house</span></h2>
-                </div>
-
-            </nav>
+            <navbar-comp></navbar-comp>
 
             <div class="intro">
                 <div class="right_section">
@@ -71,11 +44,14 @@
         </header>
 
         <main>
-            <h1>main</h1>
+            <div class="first section">
+                
+            </div>
         </main>
 
     </div>
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
+
 </body>
 
 </html>
