--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <div id="onload_page">
+    <!-- <div id="onload_page">
         <h1>onload_page</h1>
-    </div>
+    </div> -->
     <div class="site_container">
 
         <header>
