--- a/index.html
+++ b/index.html
@@ -10,46 +10,38 @@
 </head>
 
 <body>
-    <!-- <div id="onload_page">
-        <h1>onload_page</h1>
-    </div> -->
-    <div class="site_container">
 
-        <header>
-
-            <navbar-comp></navbar-comp>
-
-            <div class="intro">
-                <div class="right_section">
-                    <h1>طراحی داخلی مدرن</h1>
-                    <p>
-                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
-                        چاپگرها
-                        و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز
-                        و
-                        کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال
-                        و
-                        آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان
-                        رایانه
-                        ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد.
-                    </p>
-                    <div>
-                        <button>خرید محصولات</button>
-                        <button>جستجو</button>
-                    </div>
-                </div>
-                <img src="—Pngtree—leather sofa_40894.png" alt="">
-            </div>
-
-        </header>
-
-        <main>
-            <div class="first section">
-                
-            </div>
-        </main>
-
+    <div class="user_container">
+        <div class="user_in hide">
+            <img src="" alt="">
+            <h1 class="name_family">درود</h1>
+            <p class="userName">خوش آمدید</p>
+        </div>
+        <div class="user_off">
+            <i class="far fa-user-circle"></i>
+            <p>وارد شوید</p>
+        </div>
     </div>
+
+    <form id="login_form" action="">
+
+        <input type="text">
+        <input type="password">
+
+        <button id="form_submit" type="submit">ورود</button>
+    </form>
+    <div class="products_container">
+        <product-container></product-container>
+        <product-container></product-container>
+        <product-container></product-container>
+        <product-container></product-container>
+        <product-container></product-container>
+        <product-container></product-container>
+    </div>
+
+
+    <!-- <script src="login.js"></script> -->
+    <script src="scripts/fetch.js"></script>
     <script type="module" src="index.js"></script>
 
 </body>
