--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="user_off">
             <i class="far fa-user-circle"></i>
-            <p>وارد شوید</p>
+            <a class="goto_login_page" href="loginPage/loginPage.html">وارد شوید</a>
         </div>
     </div>
 
@@ -31,12 +31,7 @@
         <button id="form_submit" type="submit">ورود</button>
     </form>
     <div class="products_container">
-        <product-container></product-container>
-        <product-container></product-container>
-        <product-container></product-container>
-        <product-container></product-container>
-        <product-container></product-container>
-        <product-container></product-container>
+       
     </div>
 
 
