--- a/index.html
+++ b/index.html
@@ -11,29 +11,27 @@
 
 <body>
 
-    <div class="user_container">
-        <div class="user_in hide">
-            <img src="" alt="">
-            <h1 class="name_family">درود</h1>
-            <p class="userName">خوش آمدید</p>
+   
+<header>
+    <nav>
+        <div class="title_container">
+            <p>هر خانه ای با</p>
+            <h2>خانه رویایی</h2>
         </div>
-        <div class="user_off">
-            <i class="far fa-user-circle"></i>
-            <a class="goto_login_page" href="loginPage/loginPage.html">وارد شوید</a>
+        <div class="login_signup_container">
+            <button>ثبت نام</button>
+            <span>/</span>
+            <button>ورود</button>
         </div>
+        <i class="fa fa-search"></i>
+        <div class="cart_container">
+            <i class=""></i>
+        </div>
+    </nav>
+    <div class="box">
+
     </div>
-
-    <form id="login_form" action="">
-
-        <input type="text">
-        <input type="password">
-
-        <button id="form_submit" type="submit">ورود</button>
-    </form>
-    <div class="products_container">
-       
-    </div>
-
+</header>
 
     <!-- <script src="login.js"></script> -->
     <script src="scripts/fetch.js"></script>
