--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 
    
 <header>
+
     <nav>
         <div class="title_container">
-            <p>هر خانه ای با</p>
-            <h2>خانه رویایی</h2>
+            <p>هر خانه ای زیبا میشود با</p>
+            <h1>خانه رویایی</ا>
         </div>
         <div class="login_signup_container">
             <button>ثبت نام</button>
@@ -25,12 +26,22 @@
         </div>
         <i class="fa fa-search"></i>
         <div class="cart_container">
-            <i class=""></i>
+            <i class="fas fa-cart-arrow-down"></i>
+            <p>00</p>
+            <span>آیتم</span>
         </div>
+        <div class="social_container">
+            <i class="fab fa-pinterest-p"></i>
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+        </div>
+
     </nav>
+    
     <div class="box">
 
     </div>
+
 </header>
 
     <!-- <script src="login.js"></script> -->
